--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "vercel": "^33.6.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "regenerator-runtime": "^0.14.1",
     "vite": "^4.2.0"
   },
   "main": "vite.config.js",
