--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "realestate",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "framer-motion": "^10.8.5",
-    "react": "^18.2.0",
-    "react-accessible-accordion": "^5.0.0",
-    "react-countup": "^6.4.2",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-outside-click-handler": "^1.3.0",
-    "react-router-dom": "^6.22.3",
-    "surge": "^0.23.1",
-    "swiper": "^9.4.1",
-    "vercel": "^33.6.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.3",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "regenerator-runtime": "^0.14.1",
-    "vite": "^4.2.0"
-  },
-  "main": "vite.config.js",
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "name": "Light House Technologies",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "framer-motion": "^10.8.5",
+        "react": "^18.2.0",
+        "react-accessible-accordion": "^5.0.0",
+        "react-countup": "^6.4.2",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.8.0",
+        "react-outside-click-handler": "^1.3.0",
+        "react-router-dom": "^6.22.3",
+        "surge": "^0.23.1",
+        "swiper": "^9.4.1",
+        "vercel": "^33.6.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.24.3",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@vitejs/plugin-react": "^3.1.0",
+        "babel-core": "^7.0.0-bridge.0",
+        "babel-jest": "^29.7.0",
+        "jest": "^29.7.0",
+        "regenerator-runtime": "^0.14.1",
+        "vite": "^4.2.0"
+    },
+    "main": "vite.config.js",
+    "author": "",
+    "license": "ISC",
+    "description": ""
 }
